public virtual ICollection<Type> Types {get;set;} = new HashSet<Type>();
Slugs, created date/time, and updated date/time all auto created by program, not user

--- a/MawBlog/Views/Posts/Index.cshtml
+++ b/MawBlog/Views/Posts/Index.cshtml
@@ -22,6 +22,12 @@
                 @Html.DisplayNameFor(model => model.Content)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Slug)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsPublished)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Image)
             </th>
             <th>
@@ -49,6 +55,12 @@
                 @Html.DisplayFor(modelItem => item.Content)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Slug)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsPublished)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Image)
             </td>
             <td>
@@ -58,7 +70,7 @@
                 @Html.DisplayFor(modelItem => item.Updated)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Blog.Id)
+                @Html.DisplayFor(modelItem => item.Blog.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
