--- a/MawBlog/Views/Home/Index.cshtml
+++ b/MawBlog/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<MawBlog.Models.Post>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -15,22 +17,24 @@
                 <small>on tech</small>
             </h1>
 
-            <!-- Blog Post -->
-            <div class="card mb-4">
-                <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-                <div class="card-body">
-                    <h2 class="card-title">Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a href="#" class="btn btn-primary">Read More &rarr;</a>
+            @foreach (var item in Model)
+            {
+                <!-- Blog Post -->
+                <div class="card mb-4">
+                    <img class="card-img-top" src="@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
+                    <div class="card-body">
+                        <h2 class="card-title">@Html.DisplayFor(modelItem => item.Title)</h2>
+                        <p class="card-text">@Html.DisplayFor(modelItem => item.Abstract)</p>
+                        <a asp-controller="Posts" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Read More &rarr;</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Posted on @Html.DisplayFor(modelItem => item.Created) in @Html.DisplayFor(modelItem => item.Blog.Name)
+                    </div>
                 </div>
-                <div class="card-footer text-muted">
-                    Posted on January 1, 2020 by
-                    <a href="#">Start Bootstrap</a>
-                </div>
-            </div>
+            }
 
             <!-- Blog Post -->
-            <div class="card mb-4">
+            @*<div class="card mb-4">
                 <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
                 <div class="card-body">
                     <h2 class="card-title">Post Title</h2>
@@ -41,10 +45,10 @@
                     Posted on January 1, 2020 by
                     <a href="#">Start Bootstrap</a>
                 </div>
-            </div>
+            </div>*@
 
             <!-- Blog Post -->
-            <div class="card mb-4">
+            @*<div class="card mb-4">
                 <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
                 <div class="card-body">
                     <h2 class="card-title">Post Title</h2>
@@ -55,7 +59,21 @@
                     Posted on January 1, 2020 by
                     <a href="#">Start Bootstrap</a>
                 </div>
-            </div>
+            </div>*@
+
+            <!-- Blog Post -->
+            @*<div class="card mb-4">
+                <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+                <div class="card-body">
+                    <h2 class="card-title">Post Title</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                    <a href="#" class="btn btn-primary">Read More &rarr;</a>
+                </div>
+                <div class="card-footer text-muted">
+                    Posted on January 1, 2020 by
+                    <a href="#">Start Bootstrap</a>
+                </div>
+            </div>*@
 
             <!-- Pagination -->
             <ul class="pagination justify-content-center mb-4">
