--- a/MawBlog/Views/Shared/_Layout.cshtml
+++ b/MawBlog/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Blogs" asp-action="Index">New Blog</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">New Post</a>
                         </li>
                     </ul>
                 </div>
