--- a/MawBlog/Views/Tags/Delete.cshtml
+++ b/MawBlog/Views/Tags/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Post)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Post.Id)
+            @Html.DisplayFor(model => model.Post.Title)
         </dd class>
     </dl>
     
