--- a/MawBlog/Views/Tags/Index.cshtml
+++ b/MawBlog/Views/Tags/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Post.Id)
+                @Html.DisplayFor(modelItem => item.Post.Title)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
