--- a/MawBlog/Views/Blogs/Index.cshtml
+++ b/MawBlog/Views/Blogs/Index.cshtml
@@ -15,9 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Url)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -27,11 +27,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Url)
-            </td>
+            </td>*@
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-controller="Posts" asp-action="BlogPosts" asp-route-id="@item.Id">Blog Posts</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
