--- a/MawBlog/Views/Posts/Create.cshtml
+++ b/MawBlog/Views/Posts/Create.cshtml
@@ -12,10 +12,12 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="BlogId" class="control-label"></label>
                 <select asp-for="BlogId" class ="form-control" asp-items="ViewBag.BlogId"></select>
-            </div>
+            </div>*@
+            @Html.HiddenFor(model => model.BlogId)
+            <p>New post for @ViewData["BlogName"]</p>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
