Moved name of which blog we're posting to

--- a/MawBlog/Views/Posts/Create.cshtml
+++ b/MawBlog/Views/Posts/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Post</h4>
+<h4>New post for @ViewData["BlogName"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,7 +17,6 @@
                 <select asp-for="BlogId" class ="form-control" asp-items="ViewBag.BlogId"></select>
             </div>*@
             @Html.HiddenFor(model => model.BlogId)
-            <p>New post for @ViewData["BlogName"]</p>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
