--- a/MawBlog/Views/Shared/_LoginPartial.cshtml
+++ b/MawBlog/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@*@using MawBlog.Models*@
+@inject SignInManager<BlogUser> SignInManager
+@inject UserManager<BlogUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -10,8 +11,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button style="color: #F4A261 !important;
-    " type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button style="color: #F4A261 !important;" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
 }
