--- a/MawBlog/Views/Posts/Index.cshtml
+++ b/MawBlog/Views/Posts/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Posts</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">create new</a>
 </p>
 <table class="table">
     <thead>
