--- a/MawBlog/Views/Shared/_Layout.cshtml
+++ b/MawBlog/Views/Shared/_Layout.cshtml
@@ -49,6 +49,14 @@
             &copy; 2020 - MawBlog - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    @* TinyMCE *@
+    @*<script src="//cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: '#Content'
+        });
+    </script>*@
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
