Create Width increased
Mobile toggler button color -> 50% white

--- a/MawBlog/Views/Posts/BlogPosts.cshtml
+++ b/MawBlog/Views/Posts/BlogPosts.cshtml
@@ -56,7 +56,7 @@
                     @Html.DisplayFor(modelItem => item.Abstract)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Content)
+                    @Html.Raw(item.Content)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Slug)
