--- a/MawBlog/Views/Posts/Create.cshtml
+++ b/MawBlog/Views/Posts/Create.cshtml
@@ -9,13 +9,13 @@
 <h4>New post for @ViewData["BlogName"]</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @if (Model == null)
             {
                 <div class="form-group">
-                    <label asp-for="BlogId" class="control-label"></label>
+                    <label asp-for="BlogId" class="control-label">Blog</label>
                     <select asp-for="BlogId" class="form-control" asp-items="ViewBag.BlogId"></select>
                 </div>
             }
