--- a/MawBlog/Views/Posts/Index.cshtml
+++ b/MawBlog/Views/Posts/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Posts</h1>
 
 <p>
-    <a asp-action="Create">create new</a>
+    <a asp-action="Create">Create new</a>
 </p>
 <table class="table">
     <thead>
@@ -21,7 +21,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Content)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Slug)
             </th>
             <th>
@@ -29,7 +29,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Image)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Created)
             </th>
@@ -52,9 +52,9 @@
                 @Html.DisplayFor(modelItem => item.Abstract)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Content)
+                @Html.Raw(item.Content)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Slug)
             </td>
             <td>
@@ -62,7 +62,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Image)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Created)
             </td>
