--- a/MawBlog/Views/Home/Index.cshtml
+++ b/MawBlog/Views/Home/Index.cshtml
@@ -6,18 +6,11 @@
 
 <!-- Page Content -->
 <div class="container">
-
     <div class="row">
-
         <!-- Blog Entries Column -->
         <div class="col-md-8">
-
-            <h1 class="my-4">
-                My thoughts
-                <small>on tech</small>
-            </h1>
-
-            @foreach (var post in Model)
+            <h1 class="my-4">My thoughts<small>on tech</small></h1>
+            @foreach (var post in Model.OrderByDescending(m => m.Created))
             {
                 <!-- Blog Post -->
                 <div class="card mb-4">
@@ -28,58 +21,15 @@
                         <a asp-controller="Posts" asp-action="Details" asp-route-id="@post.Id" class="btn btn-primary">Read More &rarr;</a>
                         @* Add in Tags *@
                         @*@foreach (var tag in post.Tags)
-                        {
-                            <p class="card-text" style="opacity: 0.9">@Html.DisplayFor(data => tag.Name)</p>
-                        }*@
+                            {
+                                <p class="card-text" style="opacity: 0.9">@Html.DisplayFor(data => tag.Name)</p>
+                            }*@
                     </div>
                     <div class="card-footer text-muted">
                         Posted on @Html.DisplayFor(data => post.Created) in @Html.DisplayFor(data => post.Blog.Name)
                     </div>
                 </div>
             }
-
-            <!-- Blog Post -->
-            @*<div class="card mb-4">
-                <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-                <div class="card-body">
-                    <h2 class="card-title">Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a href="#" class="btn btn-primary">Read More &rarr;</a>
-                </div>
-                <div class="card-footer text-muted">
-                    Posted on January 1, 2020 by
-                    <a href="#">Start Bootstrap</a>
-                </div>
-            </div>*@
-
-            <!-- Blog Post -->
-            @*<div class="card mb-4">
-                <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-                <div class="card-body">
-                    <h2 class="card-title">Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a href="#" class="btn btn-primary">Read More &rarr;</a>
-                </div>
-                <div class="card-footer text-muted">
-                    Posted on January 1, 2020 by
-                    <a href="#">Start Bootstrap</a>
-                </div>
-            </div>*@
-
-            <!-- Blog Post -->
-            @*<div class="card mb-4">
-                <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-                <div class="card-body">
-                    <h2 class="card-title">Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a href="#" class="btn btn-primary">Read More &rarr;</a>
-                </div>
-                <div class="card-footer text-muted">
-                    Posted on January 1, 2020 by
-                    <a href="#">Start Bootstrap</a>
-                </div>
-            </div>*@
-
             <!-- Pagination -->
             <ul class="pagination justify-content-center mb-4">
                 <li class="page-item">
@@ -89,25 +39,24 @@
                     <a class="page-link" href="#">Newer &rarr;</a>
                 </li>
             </ul>
-
         </div>
 
         <!-- Sidebar Widgets Column -->
         <div class="col-md-4">
-
             <!-- Search Widget -->
             <div class="card my-4">
                 <h5 class="card-header">Search</h5>
                 <div class="card-body">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-append">
-                            <button class="btn btn-secondary" type="button">Go!</button>
-                        </span>
-                    </div>
+                    <form asp-controller="Home" asp-action="Results" method="get">
+                        <div class="input-group">
+                            <input name="SearchString" type="text" class="form-control" placeholder="Search for...">
+                            <span class="input-group-append">
+                                <button type="submit" class="btn btn-secondary">Go!</button>
+                            </span>
+                        </div>
+                    </form>
                 </div>
             </div>
-
             <!-- Categories Widget -->
             <div class="card my-4">
                 <h5 class="card-header">Categories</h5>
@@ -142,7 +91,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Side Widget -->
             <div class="card my-4">
                 <h5 class="card-header">Side Widget</h5>
@@ -150,10 +98,7 @@
                     You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
                 </div>
             </div>
-
         </div>
-
     </div>
     <!-- /.row -->
-
 </div>
