--- a/MawBlog/Views/Posts/Details.cshtml
+++ b/MawBlog/Views/Posts/Details.cshtml
@@ -26,7 +26,7 @@
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <img class="img-fluid rounded" src="@ViewData["Image"]" alt="@Model.FileName">
 
         <hr>
 
@@ -92,12 +92,14 @@
         <div class="card my-4">
             <h5 class="card-header">Search</h5>
             <div class="card-body">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-append">
-                        <button class="btn btn-secondary" type="button">Go!</button>
-                    </span>
-                </div>
+                <form asp-controller="Home" asp-action="Results" method="get">
+                    <div class="input-group">
+                        <input name="SearchString" type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-append">
+                            <button type="submit" class="btn btn-secondary">Go!</button>
+                        </span>
+                    </div>
+                </form>
             </div>
         </div>
 
