--- a/MawBlog/Views/Posts/Details.cshtml
+++ b/MawBlog/Views/Posts/Details.cshtml
@@ -26,7 +26,7 @@
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="@ViewData["Image"]" alt="@Model.FileName">
+        <img class="img-fluid rounded" src="@Model.ImageDataUrl" alt="@Model.FileName">
 
         <hr>
 
