TinyMCE skin update
Not double storing the image data in the DB

--- a/MawBlog/Views/Shared/_Layout.cshtml
+++ b/MawBlog/Views/Shared/_Layout.cshtml
@@ -53,7 +53,14 @@
     <script src="//cdn.tiny.cloud/1/5hebe8k5m07qf4mcta3paw6it1x1fve47c5l4qh7m2e7nbhv/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
-            selector: '#Content'
+            selector: '#Content',
+            branding: false,
+            skin: 'fabric',
+            content_css: 'fabric',
+            toolbar_mode: 'floating',
+            plugins: 'advlist anchor autolink charmap code codesample directionality fullpage help hr image imagetools insertdatetime link lists media nonbreaking pagebreak preview print searchreplace table template textpattern toc visualblocks visualchars wordcount',
+            toolbar: 'undo redo | formatselect | bold italic strikethrough forecolor backcolor blockquote | link image media | alignleft aligncenter alignright alignjustify | numlist bullist outdent indent | removeformat',
+            height: 400
         });
     </script>
 
