--- a/MawBlog/Views/Posts/Details.cshtml
+++ b/MawBlog/Views/Posts/Details.cshtml
@@ -140,9 +140,25 @@
 
         <!-- Side Widget -->
         <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
+            <h5 class="card-header">About the dev</h5>
             <div class="card-body">
-                You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+                <div class="row pb-3">
+                    <div class="col-4">
+                        <a href="https://mackenzie-weaver.netlify.app/"><img class="author_img rounded-circle" src="~/me100.png" alt="mackenzie weaver profile picture..." width="100"></a>
+                    </div>
+                    <div class="col">
+                        <h4>Mackenzie Weaver</h4>
+                        <p>Full Stack Web Developer</p>
+                        <div class="row social_icon justify-content-start">
+                            <a href="https://www.linkedin.com/in/mackenzie-weaver" class="mr-2 ml-3"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                            <a href="https://github.com/mackenzieweaver" class="mr-2 ml-2"><i class="fab fa-github fa-lg"></i></a>
+                            <a href="https://twitter.com/Mackenz60579223" class="mr-2 ml-2"><i class="fab fa-twitter fa-lg"></i></a>
+                            <a href="https://www.youtube.com/channel/UCojUpFISOFPXrhmCKBGiYYg" class="mr-2 ml-2"><i class="fab fa-youtube fa-lg"></i></a>
+                        </div>
+                    </div>
+                </div>                
+                <p>With a background in electronics engineering and currently working as a software developer I have a deep interest in both the hardware and software of computers. I like writing about software technologies used in web development and I want to help others and the community grow and become more positive.</p>
+                <div class="br"></div>
             </div>
         </div>
 
