--- a/MawBlog/Views/Posts/Index.cshtml
+++ b/MawBlog/Views/Posts/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create new</a>
 </p>
-<table id="myTable" class="table table-striped table-responsive">
+<table class="table table-striped table-responsive myTables">
     <thead>
         <tr>
             <th>
