--- a/MawBlog/Views/Posts/Details.cshtml
+++ b/MawBlog/Views/Posts/Details.cshtml
@@ -156,7 +156,7 @@
         </div>
 
         <!-- Categories Widget -->
-        <div class="card my-4">
+        @*<div class="card my-4">
             <h5 class="card-header">Categories</h5>
             <div class="card-body">
                 <div class="row">
@@ -188,7 +188,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <!-- Side Widget -->
         <div class="card my-4">
