--- a/MawBlog/Views/Posts/Details.cshtml
+++ b/MawBlog/Views/Posts/Details.cshtml
@@ -102,7 +102,7 @@
                                 @comment.Created.ToString("MMM dd")
                             </span>
                         </h5>
-                        @comment.Content
+                        @Html.Raw(comment.Content)
                         @*<br />
                         <button class="btn btn-primary btn-sm editButton">Edit</button>
                         <form class="editForm" asp-controller="Comments" asp-action="Edit" asp-route-id="@comment.Id" hidden>
