Ultimately In-Line Editing Removed

--- a/MawBlog/Views/Home/Index.cshtml
+++ b/MawBlog/Views/Home/Index.cshtml
@@ -108,7 +108,7 @@
                 <div class="card-body">
                     <div class="row pb-3">
                         <div class="col-4">
-                            <a href="https://mackenzie-weaver.netlify.app/"><img class="author_img rounded-circle" src="~/me100.png" alt="mackenzie weaver profile picture..." width="100"></a>
+                            <a href="https://mackenzie-weaver.netlify.app/" target="_blank"><img class="author_img rounded-circle" src="~/me100.png" alt="mackenzie weaver profile picture..." width="100"></a>
                         </div>
                         <div class="col">
                             <h4>Mackenzie Weaver</h4>
