--- a/MawBlog/Views/Posts/Details.cshtml
+++ b/MawBlog/Views/Posts/Details.cshtml
@@ -51,7 +51,8 @@
                     }
                     else
                     {
-                        <button class="btn noHover" disabled>Submit</button>
+                        @*<button class="btn noHover" disabled>Submit</button>*@
+                        <a class="btn btn-primary" asp-area="Identity" asp-page="/Account/Login">Login</a>
                     }
                 </form>
             </div>
@@ -100,13 +101,22 @@
 
                             <span style="font-size: 1rem; font-weight: 500; opacity: 0.65;">
                                 @comment.Created.ToString("MMM dd")
+
+                                @*<button class="editAnchor" onclick="ToggleEdit(@comment.Id)">Edit</button>*@
                             </span>
+
                         </h5>
                         @Html.Raw(comment.Content)
-                        @*<br />
-                        <button class="btn btn-primary btn-sm editButton">Edit</button>
-                        <form class="editForm" asp-controller="Comments" asp-action="Edit" asp-route-id="@comment.Id" hidden>
-                            <textarea name="editedComment" class="form-control" rows="2" value="@comment.Content"></textarea>
+                        @*<form id="editForm-@comment.Id" class="editForm" asp-controller="Comments" asp-action="Edit" asp-route-id="@comment.Id">
+                            @Html.Hidden("Author", comment.Author)
+                            @Html.Hidden("AuthorId", comment.AuthorId)
+                            @Html.Hidden("Content", comment.Content)
+                            @Html.Hidden("Id", comment.Id)
+                            @Html.Hidden("Post", comment.Post)
+                            @Html.Hidden("PostId", Model.Id)
+                            @Html.Hidden("Created", comment.Created)
+                            @Html.Hidden("Updated", DateTime.Now)
+                            <textarea name="editedComment" class="form-control" rows="1">@Html.Raw(comment.Content)</textarea>
                             <button class="btn btn-primary btn-sm" type="submit">Submit</button>
                         </form>*@
                     </div>
@@ -115,28 +125,28 @@
         </div>
         <!-- Comment with nested comments -->
         @*<div class="media mb-4">
-            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body">
-                <h5 class="mt-0">Commenter Name</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                <div class="media-body">
+                    <h5 class="mt-0">Commenter Name</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
-                <div class="media mt-4">
-                    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                    <div class="media-body">
-                        <h5 class="mt-0">Commenter Name</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                    <div class="media mt-4">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                        <div class="media-body">
+                            <h5 class="mt-0">Commenter Name</h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                        </div>
                     </div>
-                </div>
 
-                <div class="media mt-4">
-                    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                    <div class="media-body">
-                        <h5 class="mt-0">Commenter Name</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                    <div class="media mt-4">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                        <div class="media-body">
+                            <h5 class="mt-0">Commenter Name</h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                        </div>
                     </div>
-                </div>
 
-            </div>
+                </div>
             </div>*@
 
     </div>
@@ -161,38 +171,38 @@
 
         <!-- Categories Widget -->
         @*<div class="card my-4">
-            <h5 class="card-header">Categories</h5>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="#">Web Design</a>
-                            </li>
-                            <li>
-                                <a href="#">HTML</a>
-                            </li>
-                            <li>
-                                <a href="#">Freebies</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="#">JavaScript</a>
-                            </li>
-                            <li>
-                                <a href="#">CSS</a>
-                            </li>
-                            <li>
-                                <a href="#">Tutorials</a>
-                            </li>
-                        </ul>
+                <h5 class="card-header">Categories</h5>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled mb-0">
+                                <li>
+                                    <a href="#">Web Design</a>
+                                </li>
+                                <li>
+                                    <a href="#">HTML</a>
+                                </li>
+                                <li>
+                                    <a href="#">Freebies</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled mb-0">
+                                <li>
+                                    <a href="#">JavaScript</a>
+                                </li>
+                                <li>
+                                    <a href="#">CSS</a>
+                                </li>
+                                <li>
+                                    <a href="#">Tutorials</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>*@
+            </div>*@
 
         <!-- Side Widget -->
         <div class="card my-4">
@@ -200,7 +210,7 @@
             <div class="card-body">
                 <div class="row pb-3">
                     <div class="col-4">
-                        <a href="https://mackenzie-weaver.netlify.app/"><img class="author_img rounded-circle" src="~/me100.png" alt="mackenzie weaver profile picture..." width="100"></a>
+                        <a href="https://mackenzie-weaver.netlify.app/" target="_blank"><img class="author_img rounded-circle" src="~/me100.png" alt="mackenzie weaver profile picture..." width="100"></a>
                     </div>
                     <div class="col">
                         <h4>Mackenzie Weaver</h4>
