--- a/MawBlog/Views/Home/Index.cshtml
+++ b/MawBlog/Views/Home/Index.cshtml
@@ -114,10 +114,10 @@
                             <h4>Mackenzie Weaver</h4>
                             <p>Full Stack Web Developer</p>
                             <div class="row social_icon justify-content-start">
-                                <a href="https://www.linkedin.com/in/mackenzie-weaver" class="mr-2 ml-3"><i class="fab fa-linkedin-in fa-lg"></i></a>
-                                <a href="https://github.com/mackenzieweaver" class="mr-2 ml-2"><i class="fab fa-github fa-lg"></i></a>
-                                <a href="https://twitter.com/Mackenz60579223" class="mr-2 ml-2"><i class="fab fa-twitter fa-lg"></i></a>
-                                <a href="https://www.youtube.com/channel/UCojUpFISOFPXrhmCKBGiYYg" class="mr-2 ml-2"><i class="fab fa-youtube fa-lg"></i></a>
+                                <a href="https://www.linkedin.com/in/mackenzie-weaver" class="mr-2 ml-3" target="_blank"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                                <a href="https://github.com/mackenzieweaver" class="mr-2 ml-2" target="_blank"><i class="fab fa-github fa-lg"></i></a>
+                                <a href="https://twitter.com/Mackenz60579223" class="mr-2 ml-2" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+                                <a href="https://www.youtube.com/channel/UCojUpFISOFPXrhmCKBGiYYg" class="mr-2 ml-2" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
                             </div>
                         </div>
                     </div>
