--- a/MawBlog/Views/Home/Index.cshtml
+++ b/MawBlog/Views/Home/Index.cshtml
@@ -20,12 +20,15 @@
                     <div class="card-body">
                         <h2 class="card-title">@Html.DisplayFor(data => post.Title)</h2>
                         <p class="card-text">@Html.DisplayFor(data => post.Abstract)</p>
-                        <a asp-controller="Posts" asp-action="Details" asp-route-id="@post.Id" class="btn btn-primary">Read More &rarr;</a>
-                        @* Add in Tags *@
-                        @*@foreach (var tag in post.Tags)
+                        <a asp-controller="Posts" asp-action="Details" asp-route-id="@post.Id" class="btn btn-primary mb-2">Read More &rarr;</a>
+                        <br />
+                        @foreach (var tag in Model.Tags)
+                        {
+                            @if(tag.PostId == post.Id)
                             {
-                                <p class="card-text" style="opacity: 0.9">@Html.DisplayFor(data => tag.Name)</p>
-                            }*@
+                                <a asp-controller="Home" asp-action="Tag" asp-route-id="@tag.Name">#@tag.Name</a>
+                            }
+                        }
                     </div>
                     <div class="card-footer text-muted">
                         Posted on @post.Created.ToString("MMM dd, yyyy") in @Html.DisplayFor(data => post.Blog.Name)
@@ -70,33 +73,33 @@
                             <ul class="list-unstyled mb-0">
                                 @foreach (var blog in Model.Blogs)
                                 {
-                                <li>
-                                    @*<a asp-controller="Posts" asp-action="BlogPosts" asp-route-id="@blog.Id">@blog.Name</a>*@
-                                    <a asp-controller="Home" asp-action="Categories" asp-route-id="@blog.Id">@blog.Name</a>
-                                </li>
+                                    <li>
+                                        @*<a asp-controller="Posts" asp-action="BlogPosts" asp-route-id="@blog.Id">@blog.Name</a>*@
+                                        <a asp-controller="Home" asp-action="Categories" asp-route-id="@blog.Id">@blog.Name</a>
+                                    </li>
                                 }
                                 @*<li>
-                                    <a href="#">Web Design</a>
-                                </li>
-                                <li>
-                                    <a href="#">HTML</a>
-                                </li>
-                                <li>
-                                    <a href="#">Freebies</a>
-                                </li>*@
+                                        <a href="#">Web Design</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">HTML</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Freebies</a>
+                                    </li>*@
                             </ul>
                         </div>
                         <div class="col-lg-6">
                             <ul class="list-unstyled mb-0">
                                 @*<li>
-                                    <a href="#">JavaScript</a>
-                                </li>
-                                <li>
-                                    <a href="#">CSS</a>
-                                </li>
-                                <li>
-                                    <a href="#">Tutorials</a>
-                                </li>*@
+                                        <a href="#">JavaScript</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">CSS</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Tutorials</a>
+                                    </li>*@
                             </ul>
                         </div>
                     </div>
